---------------------------------------------------------------------------------------------------
Version: 0.8.0
Date: 2021.06.26
  Changes:
    - Total overhaul of the code!!!
    - The only way to go fast, is to go well.
    - Added Infinity Storage Container and Infinity Pipeline, which are automatically unlocked in Sandbox mode
---------------------------------------------------------------------------------------------------
Version: 0.8.1
Date: 2021.06.30
  Changes:
    - Added some Tips and Tricks for melee combat and the smart-fast-transfer feature
    - Clean up / remake GUI for Truck Station / Train Platform mode selection
    - Scale the info icons of various containers
    - Allow fast-transfer of ore back into matching miners
  Combat Balancing:
    - Reduce frequency of stronger enemies within 2x / 4x the starting area size
  Balancing:
    - Increased Hover Pack speed
    - More plants, fewer Power Slugs
  Optimizations:
    - Improved rendering of jump pad visualisation arrow
  Bugfixes:
    - Fixed Space Elevator not being rotatable due to being square
    - Fixed Onboarding locale entries
    - Fix build gun not consuming items for placeholder entities
    - Make technology items only-in-cursor
    - Fix invulnerability to gas when using the hover pack or jetpack, and also the game crashing if you die
    - Allow pipeline construction on water again
    - Make Particle Accelerator shut down in a blackout
---------------------------------------------------------------------------------------------------
Version: 0.8.2
Date: 2021.07.02
  Changes:
    - Drone Port now uses a Train Stop internally so it can be opened from the map view
    - Drones now try to only pull as many batteries as needed for a round trip, rather than a full stack
  Optimizations:
    - MASSIVE performance improvement of resource spawner. This does mean there's a small chance of "mixed patches" but that's worth it for code that's 60x faster!